# xfce4-panel-darkman

./: .gitignore  Makefile.am  configure.ac
data/: darkman.desktop
src/: config.vapi  darkman.vala  plugin.vala
